GNOME Bugzilla – Bug 671095
Memory leak in argv parsing
Last modified: 2012-03-01 21:14:59 UTC
Spotted while valgrinding (although I don't remember why I was valgrinding in the first place...), has been on my repo for a while.
Created attachment 208729 [details] [review] Plug a memory leak Free GFiles created during argv parsing.
Comment on attachment 208729 [details] [review] Plug a memory leak Looks good.
Attachment 208729 [details] pushed as bc3aa41 - Plug a memory leak