Plug a memory leak

Free GFiles created during argv parsing.

https://bugzilla.gnome.org/show_bug.cgi?id=671095